# quiz4selection

./: .cursorrules  .cursorules  .gitignore  .replit  .windsurfrules  Pasted--quiz-history-submit-answer--1734072423547.txt  Rules for AI.md  Yokenteigi.md  app.py  cleanup_grade4.py  commands.py  config.py  create_quiz_files.sh  create_test_users.py  db_diagnostic.py  def_structure_gemini.yaml  def_structure_ref.yaml  def_structure_sonnet.yaml  diagnose_connection.py  dns_diagnostics_results.json  grade4_society.json  mac_dns_diagnostics.json  main.py  migrate_quiz_data.py  models.py  pyproject.toml  quiz_data.py  quiz_manager.py  quiz_utils.py  requirements.txt  reset_db.py  reverseeng.md  sercrets.py  setup_db.py  tangenlist.md  todo.md  vercel.json
.cache/nix/: binary-cache-v6.sqlite
.upm/: store.json
docs/: todolist.md  修正.md  引数.md
instance/: quiz.db
migrations/versions/: 3b7de2aa64da_initial_migration.py  4c78f2d88a82_update_quizattempt_model.py  78bc74c3182e_add_user_id_foreign_key_to_quizattempt.py  806d3485a468_rename_quiz_history_column_to__quiz_.py  c13a89d02f07_add_user_id_to_quizattempt.py  data_migration.py  (+4 more)
quiz_data/: __init__.py  loader.py  template.json
scripts/: rename_json_keys.py  unify_json_format.py
templates/: 404.html  500.html  base.html  category_select.html  dashboard.html  difficulty_select.html  grade_select.html  index.html  login.html  quiz.html  quiz_history.html  reset_password.html  result.html  signup.html  subcategory_select.html  user_profile.html
utils/: dns_diagnostics.py  logging_utils.py  network_helpers.py
(+594 files in other folders)
