[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quiz4selection"
version = "0.1.0"
description = "多肢選択式クイズアプリケーション"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    # 主要な依存関係（バージョン範囲指定に変更）
    "Flask>=2.2.5,<3",
    "Werkzeug>=2.2.3,<3",
    "flask-migrate>=4.0.4,<5",
    "python-dotenv>=1.0.0,<2",
    "flask-login>=0.6.2,<1",
    "Flask-SQLAlchemy>=3.0.2,<4",
    "SQLAlchemy>=1.4.46,<2",  # SQLAlchemy 2.0系への移行も検討
    "flask-caching>=2.0.2,<3",
    "dnspython>=2.7.0,<3",
    "supabase>=2.0.3,<3",
    
    # データベース関連
    "psycopg2-binary>=2.9.0,<3",  # PostgreSQL用ドライバ
    
    # フォーム検証
    "email-validator>=2.0.0,<3",  # メールアドレス検証
]

[project.optional-dependencies]
dev = [
    # テスト関連
    "pytest>=7.0.0,<8",
    "pytest-flask>=1.2.0,<2",
    
    # コード品質
    "black>=23.0.0,<24",
    "flake8>=6.0.0,<7",
    "isort>=5.12.0,<6",
    
    # 型チェック
    "mypy>=1.0.0,<2",
    
    # 開発ツール
    "uv>=0.1.0",  # 依存関係管理
]

[tool.setuptools]
packages = {find = {}}

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
